[package]
name = "tightrope"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.6", features = ["full"] }
hyper-rustls = "0.27.7"
hyper-util = "0.1.16"
http-body-util = "0.1.3"
http-body = "1.0.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8"